2007-05-09  Guillem Jover  <guillem@debian.org>

	* scripts/update-alternatives.pl (config_message): Handle the case
	when @versions is empty. Return a negative value if there's nothing to
	do, 0 on success.
	(config_alternatives): Check for config_message exit value to decide
	to return instead of @versions being empty.

2007-05-09  Guillem Jover  <guillem@debian.org>

	* scripts/dpkg-buildpackage.sh: Remove check for variable being empty,
	as the path check quoted, thus removing the bashisms.

2007-05-08  Guillem Jover  <guillem@debian.org>

	* configure.ac: Bump version to 1.14.2~.

2007-05-08  Guillem Jover  <guillem@debian.org>

	* configure.ac: Release 1.14.1.

2007-05-08  Guillem Jover  <guillem@debian.org>

	* configure.ac: Bump version to 1.14.1~.

2007-05-08  Guillem Jover  <guillem@debian.org>

	* configure.ac: Release 1.14.0.

2007-05-08  Guillem Jover  <guillem@debian.org>

	* scripts/controllib.pl (read_cputable): Localize $_.
	(read_ostable): Likewise.
	(read_triplettable): Likewise.
	(parsedep): Check first for the negated architectures.
	* scripts/dpkg-checkbuilddeps.pl: Do not enable slurp mode globally.
	Use get_host_arch instead of directly dpkg-architecture.

2007-05-08  Guillem Jover  <guillem@debian.org>

	* scripts/dpkg-genchanges.pl ($pkgdatadir): New variable.
	* scripts/dpkg-gencontrol.pl: Likewise.
	* scripts/dpkg-source.pl: Likewise.
	* scripts/dpkg-checkbuilddeps.pl: Likewise.
	($dpkglibdir): Change to '..'.

2007-05-08  Guillem Jover  <guillem@debian.org>

	* scripts/update-alternatives.pl: Do not exit with an error on
	'--remove' with a non-existing link group file for now, to be
	consistent with the case when trying to remove an non-existing path.

2007-05-08  Guillem Jover  <guillem@debian.org>

	* scripts/update-alternatives.pl: Fix warning when executed w/o any
	option.

2007-05-08  Guillem Jover  <guillem@debian.org>

	* Makefile.am (EXTRA_DIST): Rename debian/pseudo-tags to
	debian/usertags.
