@@ -5,6 +5,8 @@ dpkg (1.14.2) UNRELEASED; urgency=low
   * Handle case in update-alternatives when there's no existing alternative
     to configure. Closes: #260987, #353252, #367717, #392431
   * Add solaris support to ostable and triplettable. Closes: #361866
+  * Properly create the generic name symlink in update-alternatives for new
+    alternatives. Closes: #422979
 
  -- Guillem Jover <guillem@debian.org>  Tue, 08 May 2007 18:48:22 +0300
 
