@@ -1,5 +1,10 @@
 2007-05-09  Guillem Jover  <guillem@debian.org>
 
+	* scripts/update-alternatives.pl: Create the generic name symlinks
+	when there's none, or when it differs to the current one.
+
+2007-05-09  Guillem Jover  <guillem@debian.org>
+
 	* scripts/update-alternatives.pl (config_message): Handle the case
 	when @versions is empty. Return a negative value if there's nothing to
 	do, 0 on success.
